# paper-digestions

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: brainstorming.md  streamlit-ui.md
src/paper_digest/: __init__.py  cli.py  compare.py  config.py  evaluate.py  extract.py  graph.py  ingest.py  llm.py  quality.py  render_latex.py  render_markdown.py  schema.py  streamlit_app.py  tracing.py  vision_parse.py
src/paper_digest/prompts/: __init__.py  blog.md  classify.md  compare_runs.md  critique.md  explanations.md  findings.md  judge.md  methodology.md  multi_agent_synthesizer.md  quality.md
test/expectations/: papers.json
tests/: factories.py  test_compare.py  test_extract.py  test_graph.py  test_ingest.py  test_llm.py  test_render_latex.py  test_render_markdown.py  test_tracing.py
