[project]
name = "paper-digest"
version = "0.1.0"
description = "A traceable paper digest agent that turns PDFs into Markdown, LaTeX, and PDF summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "langgraph>=0.2",
  "pydantic>=2.7",
  "pymupdf>=1.24",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
ui = [
  "streamlit>=1.28",
]

[project.scripts]
paper-digest = "paper_digest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_digest"]
artifacts = ["src/paper_digest/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".python", ".tools", "output"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
